@@ -1,3 +1,9 @@
+2007-04-18  Junichi Uekawa  <dancer@debian.org>
+
+	* qemubuilder.c (qemubuilder_create): fix deb source line.
+	(qemu_arch_qemu): return kvm only when kvm is available.
+	make this work with x86_64 host x86_64 target.	
+
 2007-04-05  Junichi Uekawa  <dancer@debian.org>
 
 	* qemubuilder.c: initial import to cowdancer repository.  rename
